--- a/Accessory_figs.rmd
+++ b/Accessory_figs.rmd
@@ -1,3 +1,12 @@
+```{r}
+remake::make("export")
+
+SummaryInd <- readRDS("export/SummaryInd.rds")
+SummarySpp <- readRDS("export/SummarySpp.rds")
+SummarySppAge <- readRDS("export/SummarySppAge.rds")
+
+source("R/figures.R")
+```
 
 #Summary  
 1. Total reproductive investment (vs. propagule investment or fruit investment) shows the strongest correlation with total plant size
@@ -91,10 +100,10 @@ points((accessory_per_seed)~seed_size,SummarySpp[["mean"]], pch=16,col=col.spp(s
 words.bottom.right.logxy(mod)
 legend("topleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
-mod <- lm(log(seed_size)~asin(sqrt(prop_accessory)),SummarySpp[["mean"]])
-plot(asin(sqrt(prop_accessory))~seed_size,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=.9)
+mod <- lm(log(seed_size)~prop_accessory,SummarySpp[["mean"]])
+plot(prop_accessory~seed_size,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=.9)
 words.bottom.right.logx(mod)
-points(asin(sqrt(prop_accessory))~seed_size,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
+points(prop_accessory~seed_size,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 mtext("seed size (mg)",1, outer=TRUE,cex=1.2)
 
 mod <- lm(log(total_weight)~log(accessory_per_seed),SummarySpp[["mean"]])
@@ -102,35 +111,37 @@ plot(accessory_per_seed~total_weight,SummaryInd, log="xy", pch=16,col=col.spp(sp
 points((accessory_per_seed)~total_weight,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right.logxy(mod)
 
-mod <- lm(log(total_weight)~asin(sqrt(prop_accessory)),SummarySpp[["mean"]])
-plot(asin(sqrt(prop_accessory))~total_weight,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=0.9)
-points(asin(sqrt(prop_accessory))~total_weight,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
+mod <- lm(log(total_weight)~prop_accessory,SummarySpp[["mean"]])
+plot(prop_accessory~total_weight,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=0.9)
+points(prop_accessory~total_weight,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right.logx(mod)
 mtext("total plant weight (mg)",1, outer=TRUE,cex=1.2)
 
 mod <- lm(log(seedset)~log(accessory_per_seed),SummarySpp[["mean"]])
-plot((accessory_per_seed)~seedset,SummaryInd, log="xy", pch=16,col=col.spp(species),ylab="accessory costs per successful seed",xlab="",cex=0.9)
-points((accessory_per_seed)~seedset,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
+plot(accessory_per_seed~seedset,SummaryInd, log="xy", pch=16,col=col.spp(species),ylab="accessory costs per successful seed",xlab="",cex=0.9)
+points(accessory_per_seed~seedset,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.top.right.logxy(mod)
 
-mod <- lm(log(seedset)~asin(sqrt(prop_accessory)),SummarySpp[["mean"]])
-plot(asin(sqrt(prop_accessory))~seedset,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=0.9)
+mod <- lm(log(seedset)~prop_accessory,SummarySpp[["mean"]])
+plot(prop_accessory~seedset,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=0.9)
 legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
-points(asin(sqrt(prop_accessory))~seedset,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
+points(prop_accessory~seedset,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.top.right.logx(mod)
 mtext("seedset",1, outer=TRUE,cex=1.2)
 
 par(mfrow=c(1,2), cex=1, omi=c(0.4,0.6,0.7,0.3), mai=c(1.1,1,0.3,0.3))
 mod <- lm(log(prepollen_all_per_seed)~log(accessory_per_seed),SummarySpp[["mean"]])
-plot((accessory_per_seed)~(prepollen_all_per_seed),SummaryInd, log="xy",pch=16,col=col.spp(species),ylab="accessory costs per successful seed",cex=0.9)
-points((accessory_per_seed)~prepollen_all_per_seed,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
+plot(accessory_per_seed~(prepollen_all_per_seed),SummaryInd, log="xy",pch=16,col=col.spp(species),ylab="accessory costs per successful seed",cex=0.9)
+points(accessory_per_seed~prepollen_all_per_seed,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right.logxy(mod)
 
-mod <- lm(asin(sqrt(prop_prepollen_all))~asin(sqrt(prop_accessory)),SummarySpp[["mean"]])
-plot(asin(sqrt(prop_accessory))~asin(sqrt(prop_prepollen_all)),SummaryInd, log="", pch=16,col=col.spp(species),ylab="proportional accessory costs",cex=0.9)
-points(asin(sqrt(prop_accessory))~asin(sqrt(prop_prepollen_all)),SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
+mod <- lm(prop_prepollen_all~prop_accessory,SummarySpp[["mean"]])
+plot(prop_accessory~prop_prepollen_all,SummaryInd, log="", pch=16,col=col.spp(species),ylab="proportional accessory costs",cex=0.9)
+points(prop_accessory~prop_prepollen_all,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right(mod)
 ```
+
+SummarySpp[["mean"]]$accessory_per_seed
 
 ###To discuss: Which measure of "accessory costs" should one use? 
 * "accessory costs per successful seed" vs "proportion of reproductive investment to accessory tissues"  
@@ -149,17 +160,17 @@ words.bottom.right(mod)
 
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14,warning=FALSE}
 par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
-mod <- lm(asin(sqrt(seedset))~asin(sqrt(RA)),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(asin(sqrt(RA))~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
+mod <- lm(seedset~RA,data=subset(SummaryInd,seedset>0&seedset<1))
+plot(RA~seedset,data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
 words.bottom.right(mod)
 
-mod <- lm(asin(sqrt(prop_propagule))~asin(sqrt(RA)),data=subset(SummaryInd,prop_propagule>0))
-plot(asin(sqrt(RA))~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
+mod <- lm(prop_propagule~RA,data=subset(SummaryInd,prop_propagule>0))
+plot(RA~prop_propagule,data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
 words.bottom.right(mod)
 legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
-mod <- lm(asin(sqrt(propagule_per_seed))~asin(sqrt(RA)),data=subset(SummaryInd,prop_propagule>0))
-plot(asin(sqrt(RA))~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="x",pch=16,col=col.spp(species))
+mod <- lm(propagule_per_seed~RA,data=subset(SummaryInd,seedset>0&seedset<1))
+plot(RA~propagule_per_seed,data=subset(SummaryInd,seedset>0&seedset<1), log="x",pch=16,col=col.spp(species))
 words.bottom.right.logx(mod)
 ```
 
@@ -171,17 +182,17 @@ words.bottom.right.logx(mod)
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14,warning=FALSE}
 par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
 options(scipen=20)
-mod <- lm(asin(sqrt(seedset))~log(repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
-plot((repro_inv)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="y")
+mod <- lm(seedset~log(repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
+plot(repro_inv~seedset,data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="y")
 words.bottom.right.logy(mod)
 
-mod <- lm(asin(sqrt(prop_propagule))~log(repro_inv),data=subset(SummaryInd,prop_propagule>0))
-plot((repro_inv)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="y")
+mod <- lm(prop_propagule~log(repro_inv),data=subset(SummaryInd,prop_propagule>0))
+plot(repro_inv~prop_propagule,data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="y")
 words.bottom.right.logy(mod)
 legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
 mod <- lm(log(propagule_per_seed)~log(repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
-plot((repro_inv)~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="xy",pch=16,col=col.spp(species))
+plot(repro_inv~propagule_per_seed,data=subset(SummaryInd,seedset>0&seedset<1), log="xy",pch=16,col=col.spp(species))
 words.bottom.right.logxy(mod)
 ```
 
@@ -196,21 +207,21 @@ words.bottom.right.logxy(mod)
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14,warning=FALSE}
 par(mfrow=c(2,2), cex=1, omi=c(0.2,0.3,0.3,0.3), mai=c(1.1,1,0.3,0.3)) 
 options(scipen=20)
-mod <- lm((prop_maxH)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(asin(sqrt(seedset))~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
+mod <- lm(prop_maxH~seedset,data=subset(SummaryInd,seedset>0&seedset<1))
+plot(seedset~prop_maxH,data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
 words.bottom.right(mod)
 
-mod <- lm(log(height)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(asin(sqrt(seedset))~(height),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="x")
+mod <- lm(log(height)~seedset,data=subset(SummaryInd,seedset>0&seedset<1))
+plot(seedset~height,data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="x")
 words.bottom.right.logx(mod)
 
-mod <- lm((prop_maxH)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,prop_propagule>0))
-plot(asin(sqrt(prop_propagule))~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
+mod <- lm(prop_maxH~prop_propagule,data=subset(SummaryInd,prop_propagule>0))
+plot(prop_propagule~prop_maxH,data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
 words.bottom.right(mod)
 legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
-mod <- lm((prop_maxH)~log(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1))
-plot((propagule_per_seed)~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), log="y",pch=16,col=col.spp(species))
+mod <- lm(prop_maxH~log(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1))
+plot(propagule_per_seed~prop_maxH,data=subset(SummaryInd,seedset>0&seedset<1), log="y",pch=16,col=col.spp(species))
 words.bottom.right.logy(mod)
 ```
 
@@ -220,46 +231,46 @@ words.bottom.right.logy(mod)
 ```{r, echo=FALSE,message=FALSE,fig.width=12, fig.height=30,warning=FALSE}
 par(mfrow=c(5,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 
-mod <- lm(log(RA)~log((propagule_inv)),data=subset(SummaryInd,RA>0&propagule_inv>0))
-plot(propagule_inv~RA,data=subset(SummaryInd,RA>0&propagule_inv>0), pch=16,col=col.spp(species),log="xy", ylab="energy to propagules (mg)")
-words.bottom.right.logxy(mod)
+mod <- lm(RA~log(propagule_inv),data=subset(SummaryInd,RA>0&propagule_inv>0))
+plot(propagule_inv~RA,data=subset(SummaryInd,RA>0&propagule_inv>0), pch=16,col=col.spp(species),log="y", ylab="energy to propagules (mg)")
+words.top.left.logxy(mod)
 
-mod <- lm(log(RA)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,RA>0&prop_propagule>0))
-plot(asin(sqrt(prop_propagule))~RA,data=subset(SummaryInd,RA>0&prop_propagule>0), log="x", pch=16,col=col.spp(species),ylab="propagules (as proportion repro inv)")
+mod <- lm(RA~prop_propagule,data=subset(SummaryInd,RA>0&prop_propagule>0))
+plot(prop_propagule~RA,data=subset(SummaryInd,RA>0&prop_propagule>0), log="", pch=16,col=col.spp(species),ylab="propagules (as proportion repro inv)")
 words.bottom.left.logx(mod)
 
 
-mod <- lm(log(RA)~log((prepollen_aborted_inv)),data=subset(SummaryInd,RA>0&prepollen_aborted_inv>0))
-plot(prepollen_aborted_inv~RA,data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp(species),log="xy",ylab="pre-pollination aborted tissues (mg)")
-words.bottom.right.logxy(mod)
+mod <- lm(RA~log(prepollen_aborted_inv),data=subset(SummaryInd,RA>0&prepollen_aborted_inv>0))
+plot(prepollen_aborted_inv~RA,data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp(species),log="y",ylab="pre-pollination aborted tissues (mg)")
+words.top.left.logxy(mod)
 
-mod <- lm(log(RA)~asin(sqrt(prop_prepollen_aborted)),data=subset(SummaryInd,RA>0&prop_prepollen_aborted>0))
-plot(asin(sqrt(prop_prepollen_aborted))~RA,data=subset(SummaryInd,RA>0&prop_prepollen_aborted>0), pch=16,col=col.spp(species), log="x",ylab="pre-pollination aborted tissues (as proportion repro inv) (asin)")
+mod <- lm(RA~prop_prepollen_aborted,data=subset(SummaryInd,RA>0&prop_prepollen_aborted>0))
+plot(prop_prepollen_aborted~RA,data=subset(SummaryInd,RA>0&prop_prepollen_aborted>0), pch=16,col=col.spp(species), log="",ylab="pre-pollination aborted tissues (as proportion repro inv)")
 words.bottom.right.logx(mod)
 
-mod <- lm(log(RA)~log((prepollen_success_inv)),data=subset(SummaryInd,RA>0&prepollen_success_inv>0))
-plot(prepollen_success_inv~RA,data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp(species),log="xy",ylab="pre-pollination successful tissues (mg)")
-words.bottom.right.logxy(mod)
+mod <- lm(RA~log(prepollen_success_inv),data=subset(SummaryInd,RA>0&prepollen_success_inv>0))
+plot(prepollen_success_inv~RA,data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp(species),log="y",ylab="pre-pollination successful tissues (mg)")
+words.top.left.logxy(mod)
 
-mod <- lm(log(RA)~asin(sqrt(prop_prepollen_success)),data=subset(SummaryInd,RA>0&prop_prepollen_success>0))
-plot(asin(sqrt(prop_prepollen_success))~RA,data=subset(SummaryInd,RA>0&prop_prepollen_success>0), pch=16,col=col.spp(species), log="x",ylab="pre-pollination successful tissues (as proportion repro inv) (asin)")
+mod <- lm(RA~prop_prepollen_success,data=subset(SummaryInd,RA>0&prop_prepollen_success>0))
+plot(prop_prepollen_success~RA,data=subset(SummaryInd,RA>0&prop_prepollen_success>0), pch=16,col=col.spp(species), log="",ylab="pre-pollination successful tissues (as proportion repro inv)")
 words.bottom.right.logx(mod)
 
-mod <- lm(log(RA)~log((packaging_dispersal_inv)),data=subset(SummaryInd,RA>0&packaging_dispersal_inv>0))
-plot(packaging_dispersal_inv~RA,data=subset(SummaryInd,RA>0&packaging_dispersal_inv>0), pch=16,col=col.spp(species),log="xy", ylab="energy to packaging and dispersal (mg)")
+mod <- lm(RA~log(packaging_dispersal_inv),data=subset(SummaryInd,RA>0&packaging_dispersal_inv>0))
+plot(packaging_dispersal_inv~RA,data=subset(SummaryInd,RA>0&packaging_dispersal_inv>0), pch=16,col=col.spp(species),log="y", ylab="energy to packaging and dispersal (mg)")
 words.bottom.right.logxy(mod)
 legend("topleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
-mod <- lm(log(RA)~asin(sqrt(prop_packaging_dispersal)),data=subset(SummaryInd,RA>0&prop_packaging_dispersal>0))
-plot(asin(sqrt(prop_packaging_dispersal))~RA,data=subset(SummaryInd,RA>0&prop_packaging_dispersal>0), log="x", pch=16,col=col.spp(species),ylab="packaging and dispersal (as proportion repro inv)")
+mod <- lm(RA~prop_packaging_dispersal,data=subset(SummaryInd,RA>0&prop_packaging_dispersal>0))
+plot(prop_packaging_dispersal~RA,data=subset(SummaryInd,RA>0&prop_packaging_dispersal>0), log="", pch=16,col=col.spp(species),ylab="packaging and dispersal (as proportion repro inv)")
 words.bottom.left.logx(mod)
 
-mod <- lm(log(RA)~log((postpollen_aborted_inv)),data=subset(SummaryInd,RA>0&postpollen_aborted_inv>0))
-plot(postpollen_aborted_inv~RA,data=subset(SummaryInd,RA>0&postpollen_aborted_inv>0), pch=16,col=col.spp(species),log="xy", ylab="energy to tissues aborted postpollination (mg)")
+mod <- lm(RA~log(postpollen_aborted_inv),data=subset(SummaryInd,RA>0&postpollen_aborted_inv>0))
+plot(postpollen_aborted_inv~RA,data=subset(SummaryInd,RA>0&postpollen_aborted_inv>0), pch=16,col=col.spp(species),log="y", ylab="energy to tissues aborted postpollination (mg)")
 words.bottom.right.logxy(mod)
 
-mod <- lm(log(RA)~asin(sqrt(prop_postpollen_aborted)),data=subset(SummaryInd,RA>0&prop_postpollen_aborted>0))
-plot(asin(sqrt(prop_postpollen_aborted))~RA,data=subset(SummaryInd,RA>0&prop_postpollen_aborted>0), log="x", pch=16,col=col.spp(species),ylab="tissues aborted postpollination (as proportion repro inv)")
+mod <- lm(RA~prop_postpollen_aborted,data=subset(SummaryInd,RA>0&prop_postpollen_aborted>0))
+plot(prop_postpollen_aborted~RA,data=subset(SummaryInd,RA>0&prop_postpollen_aborted>0), log="", pch=16,col=col.spp(species),ylab="tissues aborted postpollination (as proportion repro inv)")
 words.bottom.left.logx(mod)
 ```
 
@@ -270,44 +281,44 @@ words.bottom.left.logx(mod)
 - HATE invests by far the least into propagules  
 ```{r, echo=FALSE, message=FALSE, fig.width=14, fig.height=28,warning=FALSE}
 par(mfrow=c(4,2), cex=1, omi=c(1,.1,.7,.1), mai=c(.5,1.1,.2,0.2))  
-mean1 <- SummarySpp$prop_propagule
-se1 <- SummarySpp$prop_propagule_se
-plot(mean1~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,log="y",ylim=c(.002,.25),ylab="propagules",xlab="")
+mean1 <- SummarySpp[["mean"]]$prop_propagule
+se1 <- SummarySpp[["sd"]]$prop_propagule
+boxplot(mean1~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,log="y",ylab="proportion propagules",xlab="")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$propagule_per_seed
-se1 <- SummarySpp$propagule_per_seed_se
-plot(mean1~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,log="y",ylab="propagules",xlab="")
+mean1 <- SummarySpp[["mean"]]$propagule_per_seed
+se1 <- SummarySpp[["sd"]]$propagule_per_seed
+boxplot(mean1~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,log="y",ylab="propagules",xlab="")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$prop_prepollen_all
-se1 <- SummarySpp$prop_prepollen_all_se
-plot(mean1~species,data=subset(SummarySpp[["mean"]]),cex.axis=.5,pch=16,ylim=c(.1,1),ylab="pre-pollination tissues",xlab="")
+mean1 <- SummarySpp[["mean"]]$prop_prepollen_all
+se1 <- SummarySpp[["sd"]]$prop_prepollen_all
+boxplot(mean1~species,data=subset(SummarySpp[["mean"]]),cex.axis=.5,pch=16,ylim=c(.1,1),ylab="pre-pollination tissues",xlab="")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$prepollen_all_per_seed
-se1 <- SummarySpp$prepollen_all_per_seed_se
-plot((.01+prepollen_all_per_seed)~species,data=subset(SummarySpp[["mean"]]),cex.axis=.5,pch=16,ylab="pre-pollination tissues",xlab="",log="y")
+mean1 <- SummarySpp[["mean"]]$prepollen_all_per_seed
+se1 <- SummarySpp[["sd"]]$prepollen_all_per_seed
+boxplot((.01+prepollen_all_per_seed)~species,data=subset(SummarySpp[["mean"]]),cex.axis=.5,pch=16,ylab="pre-pollination tissues",xlab="",log="y")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$prop_packaging_dispersal
-se1 <- SummarySpp$prop_packaging_dispersal_se
-plot(mean1~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,log="y",ylim=c(.02,1),ylab="packaging and dispersal")
+mean1 <- SummarySpp[["mean"]]$prop_packaging_dispersal
+se1 <- SummarySpp[["sd"]]$prop_packaging_dispersal
+boxplot(mean1~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,log="y",ylim=c(.02,1),ylab="packaging and dispersal")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$packaging_dispersal_per_seed
-se1 <- SummarySpp$packaging_dispersal_per_seed_se
-plot((packaging_dispersal_per_seed+.1)~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,ylab="packaging and dispersal",log="y")
+mean1 <- SummarySpp[["mean"]]$packaging_dispersal_per_seed
+se1 <- SummarySpp[["sd"]]$packaging_dispersal_per_seed
+boxplot((packaging_dispersal_per_seed+.1)~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,ylab="packaging and dispersal",log="y")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$prop_postpollen_aborted
-se1 <- SummarySpp$prop_postpollen_aborted_se
-plot(mean1~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,log="y",ylim=c(.02,1),ylab="aborted post-pollination tissues")
+mean1 <- SummarySpp[["mean"]]$prop_postpollen_aborted
+se1 <- SummarySpp[["sd"]]$prop_postpollen_aborted
+boxplot(mean1~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,log="y",ylim=c(.02,1),ylab="aborted post-pollination tissues")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$postpollen_aborted_per_seed
-se1 <- SummarySpp$postpollen_aborted_per_seed_se
-plot((postpollen_aborted_per_seed+.1)~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,ylab="aborted post-pollination tissues",log="y")
+mean1 <- SummarySpp[["mean"]]$postpollen_aborted_per_seed
+se1 <- SummarySpp[["sd"]]$postpollen_aborted_per_seed
+boxplot((postpollen_aborted_per_seed+.1)~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,ylab="aborted post-pollination tissues",log="y")
 se_function(mean1,se1)
 
 mtext("proportion of reproductive investment                                                                       mg investment per seed",3,outer=TRUE,cex=1.1)
@@ -322,7 +333,7 @@ tmp <- SummaryInd %>%
   group_by(species) %>%
   summarise_each(funs(mean, se), prop_prepollen_all)
 
-plot(mean~species,
+plot(mean~as.factor(species),
      tmp,
      cex.axis=.5,pch=16,log="y",ylim=c(.02,1),
      ylab="Prop reproductive investment put into pre-pollination tissues")
@@ -336,7 +347,7 @@ tmp2 <- SummaryInd %>%
   group_by(species) %>%
   summarise_each(funs(mean, se), prop_packaging_dispersal)
 
-plot(mean~species,
+plot(mean~as.factor(species),
      tmp2,
      cex.axis=.5,pch=16,log="y",ylim=c(0.08,.8),
      ylab="Prop reproductive investment put into packaging & dispersal tissues")
