--- a/RA_figs.rmd
+++ b/RA_figs.rmd
@@ -82,7 +82,7 @@ results$a <- round(results$a,digits=2)
 results$b <- round(results$b,digits=2)
 
 for(spp in names(data)) {
-  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="",xlab="",ylab="",cex=1.4, xlim=c(0,1), ylim=c(0,1),
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="",xlab="",ylab="",cex=1, xlim=c(0,1), 
                     main=spp,col=col.age(data[[spp]]$age))
 }
 
