--- a/RA_figs.rmd
+++ b/RA_figs.rmd
@@ -73,7 +73,7 @@ xvar <- "prop_maxH"
 
 data <- subset(SummaryInd,RA>0)
 data <- split(data, data$species)
-lmfits <- lapply(data, function(x) lm(asin(sqrt(x[[yvar]])) ~  ((x[[xvar]]))))
+lmfits <- lapply(data, function(x) lm((x[[yvar]]) ~  ((x[[xvar]]))))
 results <- summarise_all_fits(lmfits)
 
 results$r.squared <- round(results$r.squared,digits=3)
@@ -114,7 +114,7 @@ for(spp in names(data)) {
 
 mtext("Reproductive investment (mg)", 2, outer=TRUE,cex=1.2)
 mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
-legend("bottomright",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
+legend("bottomright",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 ```
 
 ###Vegetative invesment by size curves by species, only including reproducing individuals  
@@ -142,7 +142,7 @@ for(spp in names(data)) {
 
 mtext("Vegetative investment (mg)", 2, outer=TRUE,cex=1.2)
 mtext("Total plant weight (mg)", 1, outer=TRUE,cex=1.2)
-legend("bottomright",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
+legend("bottomright",legend=labels.age(),col=col.age(),pch=16, cex=1.1,bty="n")
 ```
 
 ###Vegetative invesment by size curves by species, including all individuls  
@@ -268,7 +268,7 @@ for(spp in names(data)) {
   plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1.3,
                     main=spp,col=col.mature(data[[spp]]$mature)
 }
-
+#doesn't like preceding lines of text - PROBLEM
 ###calc_veg <- merge(SummaryInd, select(results, -species), by="species",all.x=TRUE)
 ###WORK HERE
 
@@ -306,13 +306,13 @@ mtext("age", 2, outer=TRUE,cex=1.2)
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE, fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.7,.7,.1,.1), mai=c(1.1,1.1,.4,0.2)) 
-plot(asin(sqrt(RA))~growth_stem_diameter,data=subset(SummaryInd,RA>0),log="x",col=col.spp(species), pch=16)
-mod <- lm(log(growth_stem_diameter)~asin(sqrt(RA)),data=subset(SummaryInd,RA>0))
+plot(RA~growth_stem_diameter,data=subset(SummaryInd,RA>0),log="x",col=col.spp(species), pch=16)
+mod <- lm(log(growth_stem_diameter)~RA,data=subset(SummaryInd,RA>0))
 words.top.right.logx(mod)
 legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=0.8,bty="n")
 
-plot(asin(sqrt(RA))~growth_shoot_diameter,data=subset(SummaryInd,RA>0),log="x",col=col.spp(species), pch=16)
-mod <- lm(log(growth_shoot_diameter)~asin(sqrt(RA)),data=subset(SummaryInd,RA>0))
+plot(RA~growth_shoot_diameter,data=subset(SummaryInd,RA>0),log="x",col=col.spp(species), pch=16)
+mod <- lm(log(growth_shoot_diameter)~RA,data=subset(SummaryInd,RA>0))
 words.top.right.logx(mod)
 ```
 
